# Pyconsole

./: .gitignore  Makefile  README  README.md  base_functions.k  pyconsole.bugs  pyconsole.k  pyconsole_win.k  pyproject.toml
python/: __main__.py  keykit_bltin.py  keykit_console.py  keykit_gen_bltin.py  keykit_gen_help.py  keykit_gen_library.py  keykit_language.py  keykit_library.py
python/.ropeproject/: globalnames  objectdb
scripts/: environment.sh  key.sh  lowkey.sh  pyconsole.bat  pyconsole.sh  runkey.sh
src/pykeykit/: README  __main__.py  keykit_bltin.py  keykit_console.py  keykit_gen_bltin.py  keykit_gen_library.py  keykit_language.py  keykit_library.py
