[tool.poetry]
name = "pykeykit"
version = "1.0"
description = "Shell for Keykit."
authors = ["Olaf Schulz <olaf_schulz+keykit@posteo.de>"]
license = "LGPLv3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
python-osc = "^1.8"
colorama = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
